<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="2dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/complete_your_profile"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal|top"
            android:text="@string/adding_these_deatailes_will_helps_us_better_understand_your_medical_condition"
            android:textColor="@color/grey2"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/height"
                android:textSize="11sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_bg"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btn_cm_height_mode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/button_bg"
                        android:backgroundTint="@color/theme_color"
                        android:paddingHorizontal="10dp"
                        android:text="@string/cm_selection"
                        android:textColor="@color/white"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/btn_ft_height_mode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/button_bg"
                        android:backgroundTint="@color/white"
                        android:paddingHorizontal="10dp"
                        android:text="@string/ft_selection"
                        android:textColor="@color/grey"
                        android:textSize="11sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/scale_pointer"
                android:layout_width="3dp"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_bg"
                android:layout_marginBottom="20sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_selected_height"
                android:backgroundTint="@color/theme_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rv_height_scroll_selector" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_height_scroll_selector"
                android:layout_width="360dp"
                android:layout_height="57dp"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                app:layout_constraintBottom_toTopOf="@id/tv_selected_height"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/cm_scale_item" />

            <TextView
                android:id="@+id/tv_selected_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="170"
                android:textColor="@color/theme_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="17dp"
            android:text="@string/profile_completion"
            android:textSize="10sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="7dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30%"
                android:textColor="@color/theme_color"
                android:textSize="12sp" />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:progress="30"
                android:progressDrawable="@drawable/profile_completion_horizontal_progress" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="44dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/button_bg"
            android:backgroundTint="@color/theme_color"
            android:gravity="center"
            android:paddingVertical="18dp"
            android:text="Next"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>